Revision history for Perl extension Net::Ping::External.

- trailing dot for unexistent host in test (Marcin Gryszkalis)
- SCO OpenServer added

0.13 Dec 18 2008
- Small fixes in test
- Support of count param on RedHat-based systems and SuSE
- Other small changes

0.12 = 0.12_02 Feb 08 2007
0.12_02: Feb 01 2007
- Full path to ping specified on NetBSD.

0.12_01: Sep 07 2006
Alexandr Ciornii appointed as comaintainer by CPAN admins
- Updated e-mails to point to me.
- Fixed ping for Cygwin, national Windows and Windows+ppt
- Added more information for report
- test.pl returns correct exit code (previously it always passed)

0.11: Feb 11 2003
- Fixed a problem that caused incorrect results in a lot of (and perhaps 
  all?) versions of Windows.  
- Also fixed the _ping_bsd function to actually call ping and return a 
  value (oops).
- Peter N. Lewis submitted a _ping_darwin function that will hopefully 
  work on all versions of Mac OS X.
- Changed the test suite to only implore people to send me test results 
  if there were any failures.
- Test suite can now run non-interactively, as it doesn't prompt the 
  user to hit enter.

0.10: Nov 10 2001
- Fixed unrecognized characters in _ping_freebsd that caused the
  module to die on some systems. (Thanks to Jonathan Stowe for the
  patch.)

0.09: Nov 10 2001
- Some additions and revisions to POD documentation.
- Further fixes to Win32 support, by Randy Moore.
- Fixes for FreeBSD support, by Marc-Andre Dumas.

0.08: Sep 30 2001
- Added support for cygwin port of perl, thanks to Alexei Gretchaninov.

0.07: Sep 27 2001 
- Added support for Mac OS X (darwin) and fixed support for Win NT.
  (Thanks to Randy Moore for the fix.)

0.06: Apr 25 2001
- Added support for a fair number of new platforms.

0.05: Apr 20 2001
- Whoops, had a relatively major bug in 0.04 that made ping fail on
  most systems. Fixed that.

0.04: Apr 20 2001
- Added "count" and "size" options.

0.03: Mar 23 2001