@@ -51,14 +51,25 @@ else {
   push @failed, 3;
 }
 
-eval { $ret = ping(host => 'some.non.existent.host.') };
-if (!$@ && !$ret) {
-  print "ok 4\n";
-  push @passed, 4;
+sub inexistent_domain_do_not_resolve {
+  use Socket;
+  return 1 unless inet_aton('some.non.existent.host.');
+  return 0;
 }
-else {
-  print "not ok 4\n";
-  push @failed, 4;
+
+if (inexistent_domain_do_not_resolve()) {
+  eval { $ret = ping(host => 'some.non.existent.host.') };
+  if (!$@ && !$ret) {
+    print "ok 4\n";
+    push @passed, 4;
+  }
+  else {
+    print "not ok 4\n";
+    push @failed, 4;
+  }
+} else {
+  push @passed, 4;
+  print "ok 4 #skipped\n";
 }
 
 eval { $ret = ping(host => '127.0.0.1', count => 2) };
